syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetesgatewayapicrds.v1;

// KubernetesGatewayApiCrdsStackOutputs captures observable outputs from the
// Gateway API CRDs installation.
message KubernetesGatewayApiCrdsStackOutputs {
  // Gateway API version that was installed (e.g., "v1.2.1", "v1.3.0").
  string installed_version = 1;

  // Installation channel that was used (standard or experimental).
  string installed_channel = 2;

  // List of CRD names that were installed.
  // Standard channel: gatewayclasses, gateways, httproutes, referencegrants
  // Experimental channel: adds tcproutes, udproutes, tlsroutes, grpcroutes
  repeated string installed_crds = 3;
}
